src/mongo/scripting/engine_v8.cpp
@@ -843,8 +843,7 @@ namespace mongo {
 
     std::string V8Scope::v8ExceptionToSTLString(const v8::TryCatch* try_catch) {
         stringstream ss;
-        v8::String::Utf8Value exceptionText(try_catch->Exception());
-        ss << *exceptionText;
+        ss << StringData(V8String((try_catch->Exception())));
 
         // get the exception message
         v8::Handle<v8::Message> message = try_catch->Message();
